tests/specs/ecosystem/wilcosp/ms_relative/0_0_2.test
wilcosp/ms-relative/0.0.2
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
 --> /src/units/units.ts:4:14
  | 
4 | export const unitTypes = {
  |              ^^^^^^^^^ this symbol is missing an explicit type
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


